tests/baselines/reference/parserAccessors9(strict=true).errors.txt
parserAccessors9.ts(1,15): error TS1049: A 'set' accessor must have exactly one parameter.
parserAccessors9.ts(1,15): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserAccessors9.ts(1,19): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserAccessors9.ts(1,22): error TS7006: Parameter 'b' implicitly has an 'any' type.


==== parserAccessors9.ts (4 errors) ====
    var v = { set foo(a, b) { } }
                  ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
                  ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                         ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.